# YATA

./: .gitignore  README.md  package-lock.json
algorithms/NLU/: .gitignore  README.md  fastapi_server.py  pyproject.toml  pyrightconfig.json
algorithms/NLU/NLU_module/: initial.py  main.py
algorithms/NLU/NLU_module/agents/: verifier.py
algorithms/NLU/NLU_module/agents/adviser/: adviser_aggregate.py  adviser_base.py  adviser_context.py  adviser_intent.py  adviser_itinerary.py  adviser_main.py  adviser_plan_actions.py  adviser_rag.py  adviser_recommendation.py  clarifier.py
algorithms/NLU/NLU_module/source/: agent_personas.py  interaction_instructions.py  model_definition.py  parse_utils.py  prompt.py
algorithms/NLU/api/: fastapi_server.py
algorithms/NLU/bug-desc/: NLU性能优化方案.md  RAG返回后NLU超时分析.md  bug-analysis-streaming-empty-content.md  fix-summary-recommendation-streaming.md
algorithms/NLU/docs/prompt/: 修复NLU严重卡死的bug并分析潜在问题.md
algorithms/RAG_chroma/: .gitignore  README.md  api_server.py  cli.py  config.py  convert_paris_txt_to_json.py  db.py  embedder.py  ingest.py  pyproject.toml  rag.py  search.py  travel_rag_full_exporter.py
algorithms/RAG_chroma/data/: Athens_gr_zh.json  Barcelona_es_zh.json  Beijing_cn_zh.json  Kyoto1.json  Kyoto3.json  Kyoto4.json  Kyoto_jp_en.json  Kyoto_jp_zh.json  Paris_fr_zh.json  Sanya_cn_en.json  Sanya_cn_zh.json  paris_2.json  paris_3.json  paris_4.json  paris_5.json
algorithms/RAG_chroma/data/Kyoto/: Kyoto1.txt  Kyoto3.txt  Kyoto4.txt
algorithms/RAG_chroma/data/paris/: paris_2.txt  paris_3.txt  paris_4.txt  paris_5.txt
(+146 files in other folders)
