[project]
name = "nlu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi>=0.121.2",
    "mwparserfromhell>=0.7.2",
    "numpy>=2.3.4",
    "openai>=2.8.0",
    "pydantic>=2.12.4",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
