[project]
name = "rag-chroma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.3",
    "fastapi>=0.121.0",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
